@@ -38,6 +38,7 @@ import javax.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.hertzbeat.collector.dispatch.DispatchConstants;
 import org.apache.hertzbeat.collector.util.CollectUtil;
 import org.apache.hertzbeat.common.entity.job.Configmap;
@@ -70,7 +71,6 @@ import org.springframework.core.io.support.PathMatchingResourcePatternResolver;
 import org.springframework.stereotype.Service;
 import org.springframework.util.Assert;
 import org.springframework.util.StreamUtils;
-import org.springframework.util.StringUtils;
 import org.yaml.snakeyaml.Yaml;
 
 /**
@@ -106,15 +106,13 @@ public class AppServiceImpl implements AppService, CommandLineRunner {
 
     @Override
     public List<ParamDefine> getAppParamDefines(String app) {
-        if (!StringUtils.hasText(app)) {
-            return Collections.emptyList();
+        if (StringUtils.isNotBlank(app)){
+            var appDefine = appDefines.get(app.toLowerCase());
+            if (appDefine != null && appDefine.getParams() != null) {
+                return appDefine.getParams();
+            }
         }
-        var appDefine = appDefines.get(app.toLowerCase());
-        if (appDefine != null && appDefine.getParams() != null) {
-            return appDefine.getParams();
-        } else {
-            return Collections.emptyList();
-        }
+        return Collections.emptyList();
     }
 
     @Override
@@ -130,7 +128,7 @@ public class AppServiceImpl implements AppService, CommandLineRunner {
                 List<Param> params = paramDao.findParamsByMonitorId(monitorId);
                 List<Configmap> configmaps = params.stream()
                         .map(param -> new Configmap(param.getField(), param.getParamValue(),
-                                param.getType())).collect(Collectors.toList());
+                                param.getType())).toList();
                 Map<String, Configmap> configmap = configmaps.stream().collect(Collectors.toMap(Configmap::getKey, item -> item, (key1, key2) -> key1));
                 CollectUtil.replaceFieldsForPushStyleMonitor(metric, configmap);
                 metricsTmp.add(metric);
@@ -170,7 +168,7 @@ public class AppServiceImpl implements AppService, CommandLineRunner {
 
     @Override
     public Job getAppDefine(String app) throws IllegalArgumentException {
-        if (!StringUtils.hasText(app)) {
+        if (StringUtils.isBlank(app)) {
             throw new IllegalArgumentException("The app can not null.");
         }
         var appDefine = appDefines.get(app.toLowerCase());
@@ -182,7 +180,7 @@ public class AppServiceImpl implements AppService, CommandLineRunner {
 
     @Override
     public Optional<Job> getAppDefineOption(String app) {
-        if (StringUtils.hasText(app)) {
+        if (StringUtils.isNotBlank(app)) {
             Job appDefine = appDefines.get(app.toLowerCase());
             return Optional.ofNullable(appDefine);
         }
@@ -192,15 +190,15 @@ public class AppServiceImpl implements AppService, CommandLineRunner {
     @Override
     public List<String> getAppDefineMetricNames(String app) {
         List<String> metricNames = new ArrayList<>(16);
-        if (StringUtils.hasLength(app)) {
+        if (StringUtils.isNotBlank(app)) {
             var appDefine = appDefines.get(app.toLowerCase());
             if (appDefine == null) {
                 throw new IllegalArgumentException("The app " + app + " not support.");
             }
-            metricNames.addAll(appDefine.getMetrics().stream().map(Metrics::getName).collect(Collectors.toList()));
+            metricNames.addAll(appDefine.getMetrics().stream().map(Metrics::getName).toList());
         } else {
             appDefines.forEach((k, v) ->
-                    metricNames.addAll(v.getMetrics().stream().map(Metrics::getName).collect(Collectors.toList())));
+                    metricNames.addAll(v.getMetrics().stream().map(Metrics::getName).toList()));
         }
         return metricNames;
     }
@@ -256,6 +254,20 @@ public class AppServiceImpl implements AppService, CommandLineRunner {
     }
 
     @Override
+    public Map<String, String> getI18nApps(String lang) {
+        Map<String, String> i18nMap = new HashMap<>(128);
+        for (var job : appDefines.values()) {
+            var name = job.getName();
+            var i18nName = CommonUtil.getLangMappingValueFromI18nMap(lang, name);
+            if (i18nName != null) {
+                i18nMap.put(job.getApp(), i18nName);
+            }
+        }
+        return i18nMap;
+    }
+
+
+    @Override
     public List<Hierarchy> getAllAppHierarchy(String lang) {
         LinkedList<Hierarchy> hierarchies = new LinkedList<>();
         for (var job : appDefines.values()) {
@@ -263,82 +275,104 @@ public class AppServiceImpl implements AppService, CommandLineRunner {
             if (DispatchConstants.PROTOCOL_PUSH.equalsIgnoreCase(job.getApp())) {
                 continue;
             }
-            var hierarchyApp = new Hierarchy();
-            hierarchyApp.setCategory(job.getCategory());
-            hierarchyApp.setValue(job.getApp());
-            hierarchyApp.setHide(job.isHide());
-            var nameMap = job.getName();
-            if (nameMap != null && !nameMap.isEmpty()) {
-                var i18nName = CommonUtil.getLangMappingValueFromI18nMap(lang, nameMap);
-                if (i18nName != null) {
-                    hierarchyApp.setLabel(i18nName);
-                }
-            }
-            List<Hierarchy> hierarchyMetricList = new LinkedList<>();
-            if (DispatchConstants.PROTOCOL_PROMETHEUS.equalsIgnoreCase(job.getApp())) {
-                List<Monitor> monitors = monitorDao.findMonitorsByAppEquals(job.getApp());
-                for (Monitor monitor : monitors) {
-                    List<CollectRep.MetricsData> metricsDataList = warehouseService.queryMonitorMetricsData(monitor.getId());
-                    for (CollectRep.MetricsData metricsData : metricsDataList) {
-                        var hierarchyMetric = new Hierarchy();
-                        hierarchyMetric.setValue(metricsData.getMetrics());
-                        hierarchyMetric.setLabel(metricsData.getMetrics());
-                        List<Hierarchy> hierarchyFieldList = metricsData.getFieldsList().stream()
-                                .map(item -> {
-                                    var hierarchyField = new Hierarchy();
-                                    hierarchyField.setValue(item.getName());
-                                    hierarchyField.setLabel(item.getName());
-                                    hierarchyField.setIsLeaf(true);
-                                    hierarchyField.setType((byte) item.getType());
-                                    hierarchyField.setUnit(item.getUnit());
-                                    return hierarchyField;
-                                }).collect(Collectors.toList());
-                        hierarchyMetric.setChildren(hierarchyFieldList);
-                        // combine Hierarchy Metrics
-                        combineHierarchyMetrics(hierarchyMetricList, hierarchyMetric);
-                    }
-                }
-                hierarchyApp.setChildren(hierarchyMetricList);
-                hierarchies.addFirst(hierarchyApp);
-            } else {
-                if (job.getMetrics() != null) {
-                    for (var metrics : job.getMetrics()) {
-                        var hierarchyMetric = new Hierarchy();
-                        hierarchyMetric.setValue(metrics.getName());
-                        var metricsI18nName = CommonUtil.getLangMappingValueFromI18nMap(lang, metrics.getI18n());
-                        hierarchyMetric.setLabel(metricsI18nName != null ? metricsI18nName : metrics.getName());
-                        List<Hierarchy> hierarchyFieldList = new LinkedList<>();
-                        if (metrics.getFields() != null) {
-                            for (var field : metrics.getFields()) {
-                                var hierarchyField = new Hierarchy();
-                                hierarchyField.setValue(field.getField());
-                                var metricI18nName = CommonUtil.getLangMappingValueFromI18nMap(lang, field.getI18n());
-                                hierarchyField.setLabel(metricI18nName != null ? metricI18nName : field.getField());
-                                hierarchyField.setIsLeaf(true);
-                                // for metric
-                                hierarchyField.setType(field.getType());
-                                hierarchyField.setUnit(field.getUnit());
-                                hierarchyFieldList.add(hierarchyField);
-                            }
-                            hierarchyMetric.setChildren(hierarchyFieldList);
-                        }
-                        hierarchyMetricList.add(hierarchyMetric);
-                    }
-                }
-                hierarchyApp.setChildren(hierarchyMetricList);
-                hierarchies.add(hierarchyApp);
-            }
+            queryAppHierarchy(lang, hierarchies, job);
         }
         return hierarchies;
     }
 
+    @Override
+    public List<Hierarchy> getAppHierarchy(String app, String lang) {
+        LinkedList<Hierarchy> hierarchies = new LinkedList<>();
+        Job job = appDefines.get(app.toLowerCase());
+        // TODO temporarily filter out push to solve the front-end problem, and open it after the subsequent design optimization
+        if (DispatchConstants.PROTOCOL_PUSH.equalsIgnoreCase(job.getApp())) {
+            return hierarchies;
+        }
+        queryAppHierarchy(lang, hierarchies, job);
+        return hierarchies;
+    }
+
+    private void queryAppHierarchy(String lang, LinkedList<Hierarchy> hierarchies, Job job) {
+        var hierarchyApp = new Hierarchy();
+        hierarchyApp.setCategory(job.getCategory());
+        hierarchyApp.setValue(job.getApp());
+        hierarchyApp.setHide(job.isHide());
+        var nameMap = job.getName();
+        if (nameMap != null && !nameMap.isEmpty()) {
+            var i18nName = CommonUtil.getLangMappingValueFromI18nMap(lang, nameMap);
+            if (i18nName != null) {
+                hierarchyApp.setLabel(i18nName);
+            }
+        }
+        List<Hierarchy> hierarchyMetricList = new LinkedList<>();
+        if (DispatchConstants.PROTOCOL_PROMETHEUS.equalsIgnoreCase(job.getApp())) {
+            List<Monitor> monitors = monitorDao.findMonitorsByAppEquals(job.getApp());
+            for (Monitor monitor : monitors) {
+                List<CollectRep.MetricsData> metricsDataList = warehouseService.queryMonitorMetricsData(monitor.getId());
+                for (CollectRep.MetricsData metricsData : metricsDataList) {
+                    var hierarchyMetric = new Hierarchy();
+                    hierarchyMetric.setValue(metricsData.getMetrics());
+                    hierarchyMetric.setLabel(metricsData.getMetrics());
+                    List<Hierarchy> hierarchyFieldList = metricsData.getFieldsList().stream()
+                            .map(item -> {
+                                var hierarchyField = new Hierarchy();
+                                hierarchyField.setValue(item.getName());
+                                hierarchyField.setLabel(item.getName());
+                                hierarchyField.setIsLeaf(true);
+                                hierarchyField.setType((byte) item.getType());
+                                hierarchyField.setUnit(item.getUnit());
+                                return hierarchyField;
+                            }).collect(Collectors.toList());
+                    hierarchyMetric.setChildren(hierarchyFieldList);
+                    // combine Hierarchy Metrics
+                    combineHierarchyMetrics(hierarchyMetricList, hierarchyMetric);
+                }
+            }
+            hierarchyApp.setChildren(hierarchyMetricList);
+            hierarchies.addFirst(hierarchyApp);
+        } else {
+            if (job.getMetrics() != null) {
+                for (var metrics : job.getMetrics()) {
+                    var hierarchyMetric = new Hierarchy();
+                    hierarchyMetric.setValue(metrics.getName());
+                    var metricsI18nName = CommonUtil.getLangMappingValueFromI18nMap(lang, metrics.getI18n());
+                    hierarchyMetric.setLabel(metricsI18nName != null ? metricsI18nName : metrics.getName());
+                    List<Hierarchy> hierarchyFieldList = new LinkedList<>();
+                    if (metrics.getFields() != null) {
+                        for (var field : metrics.getFields()) {
+                            var hierarchyField = new Hierarchy();
+                            hierarchyField.setValue(field.getField());
+                            var metricI18nName = CommonUtil.getLangMappingValueFromI18nMap(lang, field.getI18n());
+                            hierarchyField.setLabel(metricI18nName != null ? metricI18nName : field.getField());
+                            hierarchyField.setIsLeaf(true);
+                            // for metric
+                            hierarchyField.setType(field.getType());
+                            hierarchyField.setUnit(field.getUnit());
+                            hierarchyFieldList.add(hierarchyField);
+                        }
+                        hierarchyMetric.setChildren(hierarchyFieldList);
+                    }
+                    hierarchyMetricList.add(hierarchyMetric);
+                }
+            }
+            hierarchyApp.setChildren(hierarchyMetricList);
+            hierarchies.add(hierarchyApp);
+        }
+    }
+
+
     private void combineHierarchyMetrics(List<Hierarchy> hierarchyMetricList, Hierarchy hierarchyMetric) {
         Optional<Hierarchy> preHierarchyOptional = hierarchyMetricList.stream()
-                .filter(item -> item.getValue().equals(hierarchyMetric.getValue())).findFirst();
+                .filter(item -> item.getValue().equals(hierarchyMetric.getValue()))
+                .findFirst();
+
         if (preHierarchyOptional.isPresent()) {
             Hierarchy preHierarchy = preHierarchyOptional.get();
             List<Hierarchy> children = preHierarchy.getChildren();
-            Set<String> childrenKey = children.stream().map(Hierarchy::getValue).collect(Collectors.toSet());
+            Set<String> childrenKey = children.stream()
+                    .map(Hierarchy::getValue)
+                    .collect(Collectors.toSet());
+
             for (Hierarchy child : hierarchyMetric.getChildren()) {
                 if (!childrenKey.contains(child.getValue())) {
                     children.add(child);
@@ -348,6 +382,7 @@ public class AppServiceImpl implements AppService, CommandLineRunner {
             hierarchyMetricList.add(hierarchyMetric);
         }
     }
+
 
     @Override
     public Map<String, Job> getAllAppDefines() {
